<resources>
    <string name="app_name">Wedlock</string>
    <string name="facebook_event_id">1670094519870446</string>
    <string name="title_activity_home_screen_acitivty">HomeScreenAcitivty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_venue">Map</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_biography">Couple Profile</string>
    <string name="title_activity_light_music">Light Music</string>
    <string name="title_activity_song_request">Song Request</string>
    <string name="title_activity_invitation">Invitation</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
`
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_venue_details">VenueDetailsActivity</string>

    <!-- ABOUT -->

    <string name="about_version">1.0.0</string>
    <string name="about_dev_name">R.S.Ayyappan</string>
    <string name="about_dev_email">ayyappan18@gmail.com</string>
    <string name="about_dev_mobile_number_india">+91-9962003698</string>
    <string name="about_dev_mobile_number_uk">+44-7405895293</string>

    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
    </string-array>


    <!-- Activity titles -->
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <string name="ac_name_complex">Complex Example</string>
    <!-- Labels -->
    <string name="label_examples">Examples</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <string name="button_list_and_grid">ViewPager (ListView + GridView)</string>

    <string name="title_list">List</string>
    <string name="title_grid">Grid</string>

    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>

    <!-- Content descriptions -->
    <string name="descr_image">Image</string>


    <string name="menu_zoom_enable">Enable Zoom</string>
    <string name="menu_zoom_disable">Disable Zoom</string>
    <string name="menu_scale_fit_center">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start">Change to FIT_START</string>
    <string name="menu_scale_fit_end">Change to FIT_END</string>
    <string name="menu_scale_fit_xy">Change to FIT_XY</string>
    <string name="menu_scale_center">Change to CENTER</string>
    <string name="menu_scale_center_inside">Change to CENTER_INSIDE</string>
    <string name="menu_scale_center_crop">Change to CENTER_CROP</string>
    <string name="menu_zoom_random_animate">Animate scale to random value</string>
    <string name="menu_zoom_random">Set scale to random value</string>
    <string name="menu_matrix_restore">Restore Display Matrix</string>
    <string name="menu_matrix_capture">Capture Display Matrix</string>
    <string name="extract_visible_bitmap">Extract visible bitmap</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>


    <!-- Login -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Login</string>

    <string name="title_activity_register">RegisterActivity</string>

    <string name="title_activity_forgot">ForgotPassActivity</string>

    <string name="facebook_app_id">1541973516128541</string>

    <!-- Strings related to invitation selector -->

    <string name="prompt_invitation_id">Invitation Id</string>
    <string name="prompt_invitation_passcode">Invitation Passcode</string>
    <string name="action_invitation_access">Access Invitation</string>
    <string name="error_field_only_digits">Only numbers</string>

    <!-- Strings related to create account -->
    <string name="already_registered">Already have an account? Sign in</string>
    <string name="prompt_name">Name</string>
    <string name="action_register">Register</string>

    <!-- Strings related to forgot account-->
    <string name="action_recover">Recover</string>
    <string name="remembered_password">Just remembered it?</string>

    <!-- Strings related to login -->
    <string name="app_decription">Personalized app wedding invite</string>

    <string name="app_identity_request">Please provide your identity through one of the following ways</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_location">Location</string>
    <string name="action_sign_in">Sign In</string>
    <string name="different_login">or</string>
    <string name="plus_sign_out">Change Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_location">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_field_required">Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Register</string>
</resources>
