<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">


    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/txt_logo"
            style="@style/Title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:text="@string/app_name"
            android:textSize="45dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginactivity_logo_from_login"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/txt_identity_request"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txt_logo"
            android:layout_alignRight="@+id/txt_logo"
            android:layout_below="@+id/txt_logo"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/app_register"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:imeOptions="flagNavigateNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:nextFocusDown="@+id/edit_email"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/LIGHT_PURPLE"
            android:textColorHint="@color/grey_300" />
        <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:imeOptions="flagNavigateNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusDown="@+id/edit_location"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/LIGHT_PURPLE"
            android:textColorHint="@color/grey_300" />
        <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->


        <EditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/prompt_location"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/LIGHT_PURPLE"
            android:textColorHint="@color/grey_300" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn"
            android:text="@string/action_register"
            android:textColor="@color/grey_0"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>





