<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_login"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/txt_logo"
            style="@style/Title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="45dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/invitation_access_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginactivity_logo_from_login"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_invitation_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_invitation_id"
                android:inputType="number"
                android:imeOptions="flagNavigateNext"
                android:nextFocusDown="@+id/edit_invitation_passcode"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/grey_0"
                android:textColorHint="#3c1047" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_invitation_passcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_invitation_passcode"
                android:imeActionId="@+id/btn_access_invitation"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/grey_0"
                android:textColorHint="#3c1047" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_access_invitation"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/action_invitation_access"
            android:textStyle="bold"
            android:textColor="@color/grey_0" />

    </LinearLayout>
</LinearLayout>




