<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/app_primary"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="45dp"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

      <!--          <TextView
                    android:id="@+id/txt_descricao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/app_decription"
                    android:textColor="@color/grey_600"
                    android:layout_below="@+id/txt_logo"
                    android:layout_alignRight="@+id/txt_logo"
                    android:layout_alignEnd="@+id/txt_logo"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center" />-->
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/loginactivity_logo_from_login"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_identity_request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/app_identity_request"
                    android:textColor="@color/grey_600"
                    android:layout_below="@+id/txt_logo"
                    android:layout_alignRight="@+id/txt_logo"
                    android:layout_alignEnd="@+id/txt_logo"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="10dp"
                    android:textAlignment="center" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/g_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />

                <com.facebook.login.widget.LoginButton
                    xmlns:fb="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/f_sign_in_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/different_login"
                    android:textColor="@color/grey_1000"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/manual_registration_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_0"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/login_btn"
                    android:text="Enter details manually" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
